<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_signup"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/courier_prime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/courier_prime"
        android:hint="@string/enter_name"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="@color/colorText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"

            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextBackground"
            android:hint="@string/enter_email"
            android:fontFamily="@font/courier_prime"
            android:padding="12dp" />

    <EditText
        android:id="@+id/setPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"

        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/courier_prime"
        android:hint="@string/enter_password"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/courier_prime"
        android:hint="@string/enter_confirm_password"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

    
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginEnd="2dp"
            android:textColor="@color/colorAccent"
            android:text="@string/btn_signup"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginStart="2dp"
            android:textColor="@color/colorAccent"
            android:text="@string/btn_login"/>
    </LinearLayout>


</LinearLayout>